--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 # Autor: Francisco Velasco (Legajo 51141)
 spring.application.name=genome-sentinel
 
+# --- CORRECCIÓN IMPRESCINDIBLE PARA RENDER ---
+server.port=${PORT:8080}
+
+# Base de datos H2 en memoria
 spring.datasource.url=jdbc:h2:mem:genomebank;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
@@ -12,7 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Swagger/OpenAPI Configuration
+# Swagger Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
